--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -12,6 +12,10 @@
         font-family: 'Segoe UI', system-ui, sans-serif;
         min-height: 100vh;
       }
+      @keyframes pulse {
+        0%, 100% { opacity: 1; }
+        50% { opacity: 0.4; }
+      }
     </style>
   </head>
   <body>
